# funspace-mpi

./: .gitignore  .gitmodules  Cargo.toml  README.md
examples/: field.rs  space_complex_mpi.rs  space_mpi.rs
rsmpi-decomp/: Cargo.toml  README.md
rsmpi-decomp/examples/: broadcast_root.rs  gather_all.rs  gather_root.rs  gather_sum.rs  scatter_root.rs  transpose.rs
rsmpi-decomp/mpi-custom/: Cargo.toml
rsmpi-decomp/mpi-custom/mpi-sys/src/: rsmpi.c  rsmpi.h
rsmpi-decomp/mpi-custom/src/: datatype.rs  environment.rs
rsmpi-decomp/mpi-custom/src/topology/: mod.rs
rsmpi-decomp/src/: distribute.rs  functions.rs  lib.rs
src/: enums.rs  functions.rs  lib.rs  macros.rs  space1.rs  space2.rs  space3.rs  space_traits.rs  traits.rs  utils.rs
src/chebyshev/: composite.rs  composite_stencil.rs  dmsuite.rs  linalg.rs  mod.rs  ortho.rs
src/chebyshev/composite/: dirichlet.rs  dirichlet_bc.rs  dirichlet_neumann.rs  neumann.rs  neumann_bc.rs  stencil.rs
src/fourier/: c2c.rs  r2c.rs
src/mpi/: decomp_handler.rs  mod.rs  space2.rs
