[package]
name = "rsmpi-decomp"
version = "0.1.0"
authors = ["Philipp Reiter <phil.reiter93@gmail.com>"]
edition = "2018"
description = "Domain decomposition for mpi data distribution"
keywords = ["scientific", "mpi", "decomposition", "ndarray"]
readme = "README.md"
license = "MIT"
# description = "Domain decomposition for multi processor data distribution (mpi)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[workspace]
members = ["rsmpi-custom"]

[dependencies]
ndarray = { version = "0.15" }
# mpi = {path = "rsmpi-custom", version = "0.6.0"}
mpi-custom = { path = "mpi-custom", version = "0.6" }
num-traits = "0.2.12"

[dev-dependencies]
rand = "0.3"

[lib]
name = "rsmpi_decomp"
path = "src/lib.rs"

[features]
derive = ["mpi-custom/derive"]
